--- a/Final/package.json
+++ b/Final/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-check-box": "^2.1.7",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
